# 2020-school-collective-cartography

./: .gitignore  CMakeLists.txt  README.md
report/: bootstrap.css  index.html  style.css
src/: application.hpp  image.hpp  load.hpp  main.cpp  scenario.hpp  settings.hpp  sprites.hpp
src/numeric/: constants.hpp  modulo.hpp  modulo.inl  numeric.hpp  radian.hpp  radian.inl  random.hpp
src/numeric/vector/: operations.hpp  operations.inl  operators.hpp  operators.inl  trigonometry.hpp  trigonometry.inl  vector.hpp
src/simulation/: configuration.hpp  settings.hpp  simulation.hpp  terrain.hpp
